--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: libpray
 description: Muslim prayer times library for Dart which includes various calculation and juristic method that can be customised.
-version: 0.0.2
+version: 0.1.0
 author: Zulfahmi Ahmad <zulfahmi93@outlook.com>
 homepage: https://github.com/zulfahmi93/dart_libpray
 
@@ -8,11 +8,15 @@ environment:
   sdk: '>=2.0.0-dev.52.0 <3.0.0'
 
 dependencies:
-  latlong: ^0.4.5
+  latlong: ^0.5.3
   libcalendar: ^0.0.2
-  logging: ^0.11.3+1
-  meta: ^1.1.5
+  logging: ^0.11.3+2
+  meta: ^1.1.6
+  built_collection: ^3.1.3
+  built_value: ^5.5.5
 
 dev_dependencies:
-  test: ^0.12.38+1
-  mockito: ^2.2.3
+  test: ^1.3.0
+  mockito: ^3.0.0
+  build_runner: ^0.10.0
+  built_value_generator: ^6.0.0
