--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: libpray
 description: Muslim prayer times library for Dart which includes various calculation and juristic method that can be customised.
-version: 0.1.0+2
+version: 0.2.0
 author: Zulfahmi Ahmad <zulfahmi93@outlook.com>
 homepage: https://github.com/zulfahmi93/dart_libpray
 
 environment:
-  sdk: '>=2.0.0-dev.52.0 <3.0.0'
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
   libcalendar: ^0.1.0
-  logging: ^0.11.3+1
-  meta: ^1.1.5
-  built_collection: ^3.1.3
-  built_value: ^5.5.5
+  logging: ^0.11.3+2
+  meta: ^1.1.6
+  built_collection: ^4.0.0
+  built_value: ^6.1.4
 
 dev_dependencies:
-  test: ^1.3.0
+  test: ^1.3.4
   mockito: ^3.0.0
-  build_runner: ^0.10.0
-  built_value_generator: ^6.0.0
+  build_runner: ^1.0.0
+  built_value_generator: ^6.1.4
